slider done by keyframe

--- a/assets/css/style3.css
+++ b/assets/css/style3.css
@@ -12,6 +12,7 @@
 :root {
     --c-gray: #CCCECF;
     --c-black-100: #010101;
+    --c-light-green: #23CAE7;
 }
 
 .c-gray {
@@ -20,6 +21,12 @@
 
 .c-black-100 {
     color: var(--c-black-100);
+}
+
+.c-light-green {
+    background: linear-gradient(171.68deg, #00FFE1 39.97%, #6E5DF6 107.69%);
+    color: transparent;
+    background-clip: text;
 }
 
 /* header  classes  */
@@ -51,9 +58,22 @@
 
 .box-time {
     max-width: 128px;
+    position: relative;
+    z-index: 1;
     padding: 14px 18px;
     background: #ffffff01;
     backdrop-filter: blur(20px);
+}
+
+.box-time::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    height: 4px;
+    width: 100%;
+    top: 50%;
+    transform: translateY(-50%);
+    background-color: #04090E;
 }
 
 .nav-button::after {
@@ -208,6 +228,10 @@
     margin-top: 14px;
 }
 
+.pb_2 {
+    padding-bottom: 2px;
+}
+
 .vedio-tag {
     position: absolute;
     left: 50%;
@@ -223,13 +247,12 @@
     position: absolute;
     z-index: -1;
     top: 2%;
-    left: -15%;
+    left: -10%;
     width: 197px;
     height: 197px;
     background: linear-gradient(171.68deg, #00FFE1 39.97%, #6E5DF6 107.69%);
-    filter: blur(75px);
+    filter: blur(104px);
 }
-
 
 .ellipes2headerleft-topdown {
     position: absolute;
@@ -245,12 +268,17 @@
 .ellipes3headerleft-bottom {
     position: absolute;
     z-index: -1;
-    bottom: 2%;
-    left: -10%;
+    bottom: 3%;
+    left: -13%;
     width: 197px;
+    fill: #00ffe1;
     height: 197px;
     background: linear-gradient(171.68deg, #00FFE1 39.97%, #6E5DF6 107.69%);
-    filter: blur(140px);
+    filter: blur(112px);
+}
+
+.mb-100 {
+    margin-bottom: 100px;
 }
 
 .ellipes4headerright-top {
@@ -278,6 +306,55 @@
 .pb-58 {
     padding-bottom: 58px;
 }
+
+.gap-20 {
+    gap: 20px;
+}
+
+
+.man-profile-card {
+    padding: 20px;
+    min-width: 367px;
+    width: 100%;
+    background: linear-gradient(90.19deg, rgba(255, 255, 255, 0.04) -76.18%, rgba(153, 153, 153, 0.0056) 88.54%);
+    border-radius: 8px;
+}
+
+.brand_slider_parent {
+    animation-name: sliderScroll;
+    animation-duration: 70s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+    /* transform: translateX(-1272px); */
+    animation-delay: -70s;
+}
+
+.brand_slider_parent2 {
+    animation-name: sliderScroll;
+    animation-delay: -35s;
+    animation-duration: 70s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+}
+
+.mt-44 {
+    margin-top: 44px;
+}
+
+@keyframes sliderScroll {
+    0% {
+        transform: translateX(1772px);
+        -webkit-transform: translateX(1772px);
+        -moz-transform: translateX(1772px);
+        -ms-transform: translateX(1772px);
+        -o-transform: translateX(1772px);
+    }
+
+    100% {
+        transform: translateX(-1272px);
+    }
+}
+
 
 @media (min-width:768px) {
     .px-88 {
