--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -408,38 +408,38 @@ body {
 @media (max-width:576px) {
     :root {
         /*=========font-size========*/
-        --fs-xs: 16px;
-        --fs-sm: 18px;
-        --fs-md: 20px;
+        --fs-xs: 14px !important;
+        --fs-sm: 16px !important;
+        --fs-md: 20px !important;
         --fs-4md: 24px;
-        --fs-8md: 28px;
+        --fs-8md: 20px;
         --fs-lg: 32px;
         --fs-6lg: 20px !important;
         --fs-xl: 40px;
-        --fs-8xl: 28px !important;
-        --fs-xxl: 52px;
+        --fs-8xl: 20px !important;
+        --fs-xxl: 32px !important;
         --fs-2xxl: 70px;
         --fs-3xxl: 88.24px;
 
         /*=============line-height=========== */
 
-        --lh-xsm: 24px;
-        --lh-sm: 25px;
+        --lh-xsm: 22px !important;
+        --lh-sm: 22px !important;
         --lh-md: 25.6px;
-        --lh-2md: 26px;
+        --lh-2md: 25px !important;
         --lh-lg: 27.24px;
         --lh-2lg: 28px;
         --lh-xl: 29px;
         --lh-xxl: 30px;
-        --lh-2xl: 33px;
+        --lh-2xl: 28px !important;
         --lh-3xl: 34px;
         --lh-4xl: 44px;
         --lh-5xl: 46px;
         --lh-6xl: 47px;
         --lh-7xl: 38px !important;
-        --lh-8xl: 65px;
-        --lh-9xl: 62px;
-        --lh-10xl: 75px;
+        --lh-8xl: 20px !important;
+        --lh-9xl: 40px !important;
+        --lh-10xl: 48px !important;
         --lh-11xl: 87px;
         --lh-12xl: 103px;
     }
