--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,6 +77,33 @@ body {
     --clr-black: #010101;
     --c-gray: #CCCECF;
     --c-black-100: #010101;
+    --off-black: #0b0e10;
+    --off-black2: #0b0f11;
+    --off-black3: #020507;
+    --off-black4: #010101;
+    --off-black5: #15171a;
+    --gray: #4d4f51;
+    --green: #00ffe1;
+}
+
+.off-black {
+    color: var(--off-black);
+}
+
+.off-black2 {
+    color: var(--off-black2);
+}
+
+.off-black3 {
+    color: var(--off-black3);
+}
+
+.gray {
+    color: var(--gray);
+}
+
+.green {
+    color: var(--green);
 }
 
 .c-gray {
@@ -89,6 +116,13 @@ body {
 
 .text_black {
     color: var(--clr-black);
+}
+
+.font-gradient {
+    background: linear-gradient(100.62deg, #00ffe1 31.2%, #6e5df6 48.95%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 
 .fs_xs {
@@ -476,6 +510,174 @@ body {
     padding-bottom: 58px;
 }
 
+/* benifit-section */
+.ellipse_1 {
+    width: 215px;
+    height: 215px;
+    flex-shrink: 0;
+    fill: #00ffe1;
+    filter: blur(224px);
+    top: 1%;
+    left: -55%;
+    z-index: 0;
+    background: linear-gradient(100.62deg, #6e5df6 31.2%, #00ffe1 48.95%);
+}
+
+.ellipse_2 {
+    width: 215px;
+    height: 215px;
+    flex-shrink: 0;
+    fill: var(--green);
+    filter: blur(224px);
+    bottom: 24%;
+    right: -75%;
+    z-index: 0;
+    background: linear-gradient(100.62deg, #00ffe1 31.2%, #6e5df6 48.95%);
+}
+
+.section_bg {
+    background-image: url("../images/png/background-image.png");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.mw_733 {
+    max-width: 733px;
+}
+
+.mw_974 {
+    max-width: 974px;
+}
+
+.mb-27 {
+    margin-bottom: 27px;
+}
+
+.pe_10 {
+    padding-inline-end: 10px !important;
+}
+
+.ps_10 {
+    padding-inline-start: 10px !important;
+}
+
+.mobile_back_ellp {
+    left: 1%;
+    top: 12%;
+    max-width: 310px;
+    height: 350px;
+}
+
+.mobile_wh {
+    width: 100%;
+    height: 100%;
+}
+
+.icons_card {
+    padding: 16px 14px 16px 14px;
+    background: #0b0e10;
+    border-radius: 4px;
+    margin-bottom: 15px;
+}
+
+.z-5 {
+    z-index: 5;
+}
+
+.benifit_card:hover .icons_card {
+    background: var(--off-black5);
+}
+
+.benifit_card:hover {
+    border: 1px solid var(--green);
+    border-radius: 12px;
+    background: var(--off-black2);
+}
+
+.benifit_card {
+    transition: all 0.4s linear;
+    padding: 30px 10.5px 30px 10.5px;
+    min-height: 180px;
+}
+
+.mt_10 {
+    margin-top: -10px;
+}
+
+.mobile_trading {
+    border-radius: 5.87px;
+    max-width: 244px;
+    max-height: 224px;
+}
+
+.mobile_inner_part {
+    padding: 44px 14px;
+    max-width: 264px;
+    top: 4%;
+    left: 8%;
+}
+
+.mw_224 {
+    max-width: 224px;
+}
+
+.mw_974 {
+    max-width: 974px;
+}
+
+.mw_990 {
+    max-width: 990px !important;
+}
+
+/* understanding-section */
+.understanding_card {
+    border-radius: 15px;
+    width: 524px;
+    max-width: 100%;
+    min-height: 260px;
+    padding: 20px 20px 0px 20px;
+    background: linear-gradient(82.41deg, #00ffe1 -12.77%, #6e5df6 93.08%);
+}
+
+.mw_946 {
+    max-width: 946px;
+}
+
+.italic {
+    font-style: italic;
+}
+
+.style_normal {
+    font-style: normal;
+}
+
+.man_img {
+    width: 72px;
+    height: 72px;
+}
+
+.trade_img {
+    border-radius: 15px;
+    max-width: 471px;
+    transform: translateY(-4%);
+}
+
+.maximize_btn:hover {
+    --tw-shadow: -4px 0 12px -2px #6e5df6, 4px 0 12px -2px #00ffe1;
+    --tw-shadow-colored: -4px 0 12px -2px var(--tw-shadow-color),
+        4px 0 12px -2px var(--tw-shadow-color);
+    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),
+        var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.maximize_btn {
+    transition: all 400ms linear;
+    padding: 12px 24px 12px 24px;
+    border: 1px solid white;
+    border-radius: 4px;
+    background: linear-gradient(107.02deg, #00ffe1 12.76%, #6e5df6 91.81%);
+}
 
 /*==================Statistics=================== */
 .pt_Statistics {
@@ -625,12 +827,43 @@ body {
         padding-top: 150px;
         padding-bottom: 150px;
     }
+
+    .mw_1200 {
+        max-width: 1200px !important;
+    }
 }
 
 @media (min-width:992px) {
-
     .mw_750 {
         max-width: 750px !important;
+    }
+
+    .icons_card {
+        margin-bottom: 32px;
+    }
+
+    .ellipse_1 {
+        width: 415px;
+        height: 415px;
+    }
+
+    .ellipse_2 {
+        width: 415px;
+        height: 415px;
+    }
+
+    .trade_img {
+        transform: translateY(-15%);
+    }
+
+    .benifit_card {
+        padding: 20px 20.5px 20px 20.5px;
+        min-height: 240px;
+    }
+
+    .mobile_back_ellp {
+        left: 5%;
+        top: 12%;
     }
 }
 
@@ -706,6 +939,16 @@ body {
         background-size: 100% 100%;
         background-repeat: no-repeat;
     }
+
+    .mobile_wh {
+        width: 314px;
+        height: 614px;
+    }
+
+    .mobile_back_ellp {
+        left: 30%;
+        top: 12%;
+    }
 }
 
 @media (min-width:1400px) or (max-width:1600px) {
@@ -760,5 +1003,18 @@ body {
 
         border: 8px solid white;
         border-radius: 100%;
+    }
+}
+
+@media (min-width: 1023.8px) {
+    .understanding_card {
+        padding: 25px 50px 0px 25px;
+    }
+
+    .mobile_back_ellp {
+        left: 5%;
+        top: 12%;
+        max-width: 461px;
+        height: 421px;
     }
 }
