--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -274,6 +274,7 @@ body {
     position: relative;
     z-index: 1;
     overflow: hidden;
+    transition: all .3s linear;
 }
 
 .mt-20 {
@@ -307,6 +308,14 @@ body {
     z-index: -1;
     background: linear-gradient(107.02deg, #00FFE1 12.76%, #6E5DF6 91.81%);
     opacity: 1;
+}
+
+.nav-button:hover {
+    background-color: white;
+}
+
+.nav-button:hover::after {
+    opacity: 0;
 }
 
 .max-w-388 {
@@ -534,7 +543,6 @@ body {
 .gap-20 {
     gap: 20px;
 }
-
 
 .man-profile-card {
     padding: 20px;
