--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -318,10 +318,6 @@ body {
     opacity: 0;
 }
 
-.max-w-388 {
-    max-width: 388px;
-}
-
 .nav-background {
     background-color: #ffffff17;
 }
@@ -371,10 +367,6 @@ body {
 .px-12P {
     padding-left: 12px;
     padding-right: 12px;
-}
-
-.max-w-654 {
-    max-width: 654px;
 }
 
 .mt-39 {
@@ -618,8 +610,12 @@ body {
     background-size: cover;
 }
 
+.mw_946 {
+    max-width: 946px;
+}
+
 .mw_733 {
-    max-width: 733px;
+    max-width: 733px
 }
 
 .mw_974 {
@@ -756,10 +752,6 @@ body {
 }
 
 /*==================Statistics=================== */
-.pt_Statistics {
-    padding-top: 151px;
-}
-
 .Statistics_ellips1 {
     position: absolute;
     z-index: -1;
@@ -904,11 +896,19 @@ body {
     .mw_1200 {
         max-width: 1200px !important;
     }
+
+    .pt_Statistics {
+        padding-top: 151px;
+    }
 }
 
 @media (min-width:992px) {
     .mw_750 {
         max-width: 750px !important;
+    }
+
+    .max-w-654 {
+        max-width: 654px;
     }
 
     .icons_card {
@@ -937,6 +937,14 @@ body {
     .mobile_back_ellp {
         left: 5%;
         top: 12%;
+    }
+
+    .pt_Statistics {
+        padding-top: 80px;
+    }
+
+    .max-w-388 {
+        max-width: 388px;
     }
 }
 
@@ -987,6 +995,10 @@ body {
         --lh-12xl: 103px;
     }
 
+    .pt_Statistics {
+        padding-top: 70px;
+    }
+
 }
 
 @media (min-width:768px) {
@@ -1022,6 +1034,10 @@ body {
         left: 30%;
         top: 12%;
     }
+
+    .pt_Statistics {
+        padding-top: 70px;
+    }
 }
 
 @media (max-width:576px) {
@@ -1033,7 +1049,7 @@ body {
         --fs_2md: 21.13px;
         --fs-4md: 24px;
         --fs-8md: 20px;
-        --fs-lg: 26px !important;
+        --fs-lg: 20px !important;
         --fs-6lg: 20px !important;
         --fs-xl: 40px;
         --fs-8xl: 20px !important;
@@ -1053,10 +1069,10 @@ body {
         --lh-xxl: 30px;
         --lh-2xl: 28px !important;
         --lh-3xl: 34px;
-        --lh-4xl: 44px;
+        --lh-4xl: 31px !important;
         --lh-5xl: 46px;
         --lh-6xl: 47px;
-        --lh-7xl: 38px !important;
+        --lh-7xl: 33px !important;
         --lh-8xl: 20px !important;
         --lh-9xl: 40px !important;
         --lh-10xl: 48px !important;
