--- a/assets/css/style4.css
+++ b/assets/css/style4.css
@@ -7,15 +7,26 @@
     /* root */
     
      :root {
+        /* line-height */
+        --lh-6xxl: 54.47px;
         /* color */
         --white: #ffffff;
         --black: #000000;
         --greenlight: #00FFE1;
         --gray: #B2B5B6;
+        --black-gray: #0F1B22;
+    }
+    
+    .lh_6xxl {
+        line-height: var(--lh-6xxl);
     }
     
     .white {
         color: var(--white);
+    }
+    
+    .bg_grayblack {
+        background-color: var(--black-gray);
     }
     /* --------------common-class-------------- */
     
@@ -64,7 +75,7 @@
     }
     
     .footerPadding {
-        padding-top: 10px;
+        padding-top: 20px;
     }
     /* margin */
     
@@ -139,7 +150,7 @@
     /* -------------Ai stock trading section------------- */
     
     .AiStockCard {
-        /* margin: 8px 2px; */
+        max-width: 558px;
         padding: 24px;
         border-radius: 8px;
         background-color: var(--black);
@@ -167,7 +178,19 @@
         padding: 16px;
     }
     
-     ::placeholder {
+    .AiStockInputPhone {
+        background-color: transparent;
+        color: white;
+        outline: none;
+        border-radius: 8px;
+        padding: 16px;
+    }
+    
+    .borderInput {
+        border: 1px solid var(--gray);
+    }
+    
+    .place::placeholder {
         color: var(--white);
     }
     
@@ -179,44 +202,41 @@
         padding-top: 12px;
         border-radius: 8px;
     }
-    /* footer */
     /* ----------------footer-section---------------- */
-    /* .bg_footer {
-        background-image: url(../src/assets/svg/FooterImg.svg);
-        background-position: center;
-        background-repeat: no-repeat;
-        background-size: 100% 100%;
-    } */
-    /*     
-    .footerImg {
-        background-image: url(../src/assets/image/footerImg.webp);
-        background-color: var(--green-blue);
-        background-position: center;
-        background-repeat: no-repeat;
-        background-size: cover;
-    } */
     
     .opacity {
         opacity: 80%;
     }
     
     .circle {
-        border: 1.16px solid var(--white);
+        position: relative;
         border-radius: 34px;
         width: 34px;
         height: 34px;
         transition: all linear 300ms;
     }
     
-    .circle:hover {
-        border: 1.16px solid transparent;
+    .circle::before {
+        content: "";
+        position: absolute;
+        inset: 0;
+        border-radius: 50px;
+        padding: 1px;
+        background: linear-gradient(180.4deg, #00FFE1 38.61%, #6E5DF6 92.96%);
+        -webkit-mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
+        -webkit-mask-composite: xor;
+        mask-composite: exclude;
+    }
+    
+    .circle::before:hover {
+        padding: 0px;
         animation: pulsegardianttWO 1s linear;
         box-shadow: 0 0 0 0.7em transparent;
     }
     
     @keyframes pulsegardianttWO {
         0% {
-            box-shadow: 0 0 var(--white);
+            box-shadow: 0 0 linear-gradient(180.4deg, #00FFE1 38.61%, #6E5DF6 92.96%);
         }
     }
     /* border-top */
@@ -226,6 +246,137 @@
         height: 1px;
         background: linear-gradient(91.34deg, rgba(0, 255, 225, 0) 0%, rgba(0, 255, 225, 0.35) 9.95%, #00FFE1 48.76%, rgba(0, 255, 225, 0.35) 87.72%, rgba(0, 255, 225, 0) 97.72%);
         ;
+    }
+    /* ellips */
+    
+    .FaqLeftEllips {
+        position: absolute;
+        bottom: 10%;
+        left: -10%;
+        width: 150px;
+        height: 150px;
+        background: linear-gradient(171.68deg, #00FFE1 39.97%, #6E5DF6 107.69%);
+        filter: blur(140px);
+        z-index: -1;
+    }
+    
+    .FaqRightEllips {
+        position: absolute;
+        top: -20%;
+        right: -5%;
+        width: 100px;
+        height: 150px;
+        background: linear-gradient(171.68deg, #00FFE1 39.97%, #6E5DF6 107.69%);
+        filter: blur(140px);
+        z-index: -1;
+    }
+    
+    .FaqBottomEllips {
+        position: absolute;
+        bottom: -20%;
+        right: -10%;
+        width: 100px;
+        height: 100px;
+        background: linear-gradient(171.68deg, #00FFE1 39.97%, #6E5DF6 107.69%);
+        filter: blur(140px);
+        z-index: -1;
+    }
+    
+    .Ai_stackLeftEllips {
+        position: absolute;
+        bottom: 20%;
+        left: -10%;
+        width: 100px;
+        height: 100px;
+        background: linear-gradient(171.68deg, #00FFE1 39.97%, #6E5DF6 107.69%);
+        filter: blur(160px);
+        z-index: -1;
+    }
+    
+    .Ai_stackRightEllips {
+        position: absolute;
+        bottom: 20%;
+        right: -10%;
+        width: 200px;
+        height: 200px;
+        background: linear-gradient(171.68deg, #00FFE1 39.97%, #6E5DF6 107.69%);
+        filter: blur(160px);
+        z-index: -1;
+    }
+    
+    .footerLeft {
+        position: absolute;
+        top: 20%;
+        left: -10%;
+        width: 100px;
+        height: 100px;
+        background: linear-gradient(171.68deg, #00FFE1 39.97%, #6E5DF6 107.69%);
+        filter: blur(120px);
+        z-index: -1;
+    }
+    
+    .footerRight {
+        position: absolute;
+        bottom: 30%;
+        right: -10%;
+        width: 100px;
+        height: 50px;
+        background: linear-gradient(171.68deg, #00FFE1 39.97%, #6E5DF6 107.69%);
+        filter: blur(120px);
+        z-index: -1;
+    }
+    
+    .min_h {
+        min-height: 534px;
+    }
+    
+    .imgAIshot {
+        position: absolute;
+        top: 40%;
+        left: 10%;
+        transform: translate(50% -50%);
+    }
+    
+    .max_Width {
+        max-width: 153px;
+    }
+    
+    .imgAi {
+        max-width: 130px;
+        height: 110px;
+        transition: all linear 300ms;
+    }
+    
+    .imgAi:hover {
+        transform: scale(1.05);
+    }
+    
+    .imgPostion {
+        position: absolute;
+        left: -73%;
+        top: 16%;
+        z-index: -1;
+    }
+    
+    .imgPostion2 {
+        position: absolute;
+        left: -73%;
+        bottom: 17%;
+        z-index: -1;
+    }
+    
+    .imgPostion3 {
+        position: absolute;
+        right: -73%;
+        top: 17%;
+        z-index: -1;
+    }
+    
+    .imgPostion4 {
+        position: absolute;
+        right: -73%;
+        bottom: 17%;
+        z-index: -1;
     }
     /* media quary */
     
@@ -239,9 +390,53 @@
         .accordion-item {
             padding-bottom: 20px !important;
         }
+        /* aispote */
+        .imgAi {
+            max-width: 207px;
+            height: 176px;
+        }
+        /* footer */
+        .footerPadding {
+            padding-top: 10px;
+        }
+        .FaqLeftEllips {
+            width: 220px;
+            height: 200px;
+        }
+        .FaqRightEllips {
+            width: 150px;
+            height: 200px;
+        }
+        .FaqBottomEllips {
+            width: 160px;
+            height: 200px;
+        }
+        .Ai_stackLeftEllips {
+            width: 200px;
+            height: 200px;
+        }
+        .Ai_stackRightEllips {
+            width: 200px;
+            height: 200px;
+        }
+        .footerLeft {
+            width: 200px;
+            height: 200px;
+            filter: blur(160px);
+        }
+        .footerRight {
+            width: 200px;
+            height: 100px;
+        }
     }
     
-    @media (min-width:1400px)and (max-width:1600px) {
+    @media (min-width:767.5px) {}
+    
+    @media (min-width:991.5px) {}
+    
+    @media (min-width:1199.5px) {}
+    
+    @media (min-width:1400px) and (max-width:1600px) {
         .container {
             max-width: 1164px !important;
         }
