--- a/assets/css/style3.css
+++ b/assets/css/style3.css
@@ -90,8 +90,20 @@
 .nav-button:hover {
     background-color: white;
 }
+
 .nav-button:hover::after {
     opacity: 0;
+}
+
+.border-3-gradiant::before {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    height: 3px;
+    width: 100%;
+    opacity: 4%;
+    background: linear-gradient(195.67deg, #00FFE1 83.47%, #6E5DF6 102.11%);
 }
 
 .max-w-388 {
