--- a/assets/css/style4.css
+++ b/assets/css/style4.css
@@ -207,14 +207,14 @@
         padding-bottom: 12px;
         padding-top: 12px;
         border-radius: 8px;
+        transition: all linear 300ms;
     }
     
-    .btnSignup:hover {}
+    .btnSignup:hover {
+        background: var(--white);
+        color: var(--black);
+    }
     /* ----------------footer-section---------------- */
-    
-    .opacity {
-        opacity: 80%;
-    }
     
     .circle {
         position: relative;
@@ -222,6 +222,10 @@
         width: 34px;
         height: 34px;
         transition: all linear 300ms;
+    }
+    
+    .circle:hover {
+        transform: translateY(-10%);
     }
     
     .circle::before {
@@ -234,18 +238,6 @@
         -webkit-mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
         -webkit-mask-composite: xor;
         mask-composite: exclude;
-    }
-    
-    .circle::before:hover {
-        padding: 0px;
-        animation: pulsegardianttWO 1s linear;
-        box-shadow: 0 0 0 0.7em transparent;
-    }
-    
-    @keyframes pulsegardianttWO {
-        0% {
-            box-shadow: 0 0 linear-gradient(180.4deg, #00FFE1 38.61%, #6E5DF6 92.96%);
-        }
     }
     /* border-top */
     
