--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1066,9 +1066,9 @@ body {
 
 .accordion-item {
     padding-bottom: 6px !important;
-    background-color: var(--black) !important;
+    background-color: transparent !important;
     color: var(--white) !important;
-    border-bottom: 0.5px solid var(--greenlight);
+    border-bottom: 0.5px solid var(--greenlight) !important;
 }
 
 .accordion-item:last-of-type {
@@ -1085,7 +1085,7 @@ body {
 .accordion-button::after {
     margin-left: auto;
     content: "";
-    background-image: url(../images/svg/ArrowUp.svg);
+    background-image: url(../images/svg/ArrowUp.svg) !important;
     background-size: none !important;
 }
 
@@ -1171,7 +1171,6 @@ button:not(:disabled) {
 
 .btnSignup:hover {
     background: var(--white);
-    color: var(--black);
 }
 
 /* ----------------footer-section---------------- */
@@ -1200,16 +1199,12 @@ button:not(:disabled) {
     mask-composite: exclude;
 }
 
-/* border-top */
-
 .borderTop {
     width: 100%;
     height: 1px;
     background: linear-gradient(91.34deg, rgba(0, 255, 225, 0) 0%, rgba(0, 255, 225, 0.35) 9.95%, #00FFE1 48.76%, rgba(0, 255, 225, 0.35) 87.72%, rgba(0, 255, 225, 0) 97.72%);
     ;
 }
-
-/* ellips */
 
 .FaqLeftEllips {
     position: absolute;
@@ -1420,42 +1415,14 @@ button:not(:disabled) {
 @media (max-width:1200px) {
     :root {
         /*=========font-size========*/
-        --fs-xs: 16px;
-        --fs-sm: 18px;
-        --fs-md: 20px;
-        --fs-4md: 24px;
-        --fs-8md: 28px;
-        --fs-lg: 32px;
         --fs-6lg: 30px !important;
-        --fs-xl: 40px;
         --fs-8xl: 35px !important;
-        --fs-xxl: 52px;
-        --fs-2xxl: 70px;
-        --fs-3xxl: 88.24px;
     }
 }
 
 @media (max-width:768px) {
     :root {
-        --lh-xsm: 24px;
-        --lh-sm: 25px;
-        --lh-md: 25.6px;
-        --lh-2md: 26px;
-        --lh-lg: 27.24px;
-        --lh-2lg: 28px;
-        --lh-xl: 29px;
-        --lh-xxl: 30px;
-        --lh-2xl: 33px;
-        --lh-3xl: 34px;
-        --lh-4xl: 44px;
-        --lh-5xl: 46px;
-        --lh-6xl: 47px;
         --lh-7xl: 47px !important;
-        --lh-8xl: 65px;
-        --lh-9xl: 62px;
-        --lh-10xl: 75px;
-        --lh-11xl: 87px;
-        --lh-12xl: 103px;
     }
 
     .pt_Statistics {
@@ -1509,38 +1476,22 @@ button:not(:disabled) {
         --fs-xs: 14px !important;
         --fs-sm: 16px !important;
         --fs-md: 20px !important;
-        --fs_2md: 21.13px;
-        --fs-4md: 24px;
-        --fs-8md: 20px;
         --fs-lg: 20px !important;
         --fs-6lg: 20px !important;
-        --fs-xl: 40px;
+        --fs-xl: 32px !important;
         --fs-8xl: 28px !important;
         --fs-xxl: 32px !important;
-        --fs-2xxl: 70px;
-        --fs-3xxl: 88.24px;
 
         /*=============line-height=========== */
-
         --lh-xsm: 22px !important;
         --lh-sm: 22px !important;
-        --lh-md: 25.6px;
         --lh-2md: 25px !important;
-        --lh-lg: 27.24px;
-        --lh-2lg: 28px;
-        --lh-xl: 29px;
-        --lh-xxl: 30px;
         --lh-2xl: 28px !important;
-        --lh-3xl: 34px;
         --lh-4xl: 31px !important;
-        --lh-5xl: 46px;
-        --lh-6xl: 47px;
         --lh-7xl: 33px !important;
         --lh-8xl: 20px !important;
         --lh-9xl: 40px !important;
         --lh-10xl: 48px !important;
-        --lh-11xl: 87px;
-        --lh-12xl: 103px;
     }
 
     .statistics_circle {
