--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -287,7 +287,7 @@ body {
 /*=====================Header-section===================*/
 
 .bg-hero-img {
-    background-image: url(../images/png/Heroimg.webp);
+    background-image: url(../images/webp/Heroimg.webp);
     background-size: cover;
     background-repeat: no-repeat;
 }
@@ -1535,9 +1535,7 @@ button:not(:disabled) {
     }
 
     .bg-hero-img {
-        background-image: url(../images/png/Heroimg.webp);
         background-size: 100% 100%;
-        background-repeat: no-repeat;
     }
 
     .mobile_wh {
