--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -582,6 +582,11 @@ body {
     background: linear-gradient(90.19deg, rgba(255, 255, 255, 0.04) -76.18%, rgba(153, 153, 153, 0.0056) 88.54%);
     border-radius: 8px;
     cursor: pointer;
+    transition: all 300ms linear !important;
+}
+
+.man-profile-card:hover {
+    box-shadow: 0px 0px 4px 1px var(--green);
 }
 
 .border-3-gradiant::before {
