--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -951,8 +951,9 @@ body {
 .common_btn {
     background: linear-gradient(107.02deg, #00FFE1 12.76%, #6E5DF6 91.81%) !important;
     border: 1px solid #FFFFFF;
-    padding: 11px 24px 11px 22.7px;
+    padding: 12px 24px 12px 24px;
     border-radius: 4px;
+    color: black;
     transition: all .3s linear !important;
 }
 
